...
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_weight="1"
                    android:background="@drawable/background_search_bar">

                    <androidx.appcompat.widget.SearchView
                        android:id="@+id/search_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        app:iconifiedByDefault="false"
                        app:queryBackground="@null"
                        app:queryHint="@string/search" />
...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:padding="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_list_user" />
...
